syntax = "proto3";

package main;
option go_package = "/proto/generated_files;running_trackerpb";

import "responses.proto";
import "requests.proto";

service TrainersService {
	rpc add_trainers(AddTrainersRequest) returns (AddTrainersResponse);
	rpc get_trainers(GetTrainersRequest) returns (GetTrainersResponse);
}